Fix quote text from wrapping

--- a/style.css
+++ b/style.css
@@ -100,16 +100,16 @@ a {
     justify-content: center;
     align-items: center;
     padding: 100px 380px;
+    /* Padding: 100px 0px; */
+    /* flex-basis: reverse 600px; */
     color: #1F2937;    
 }
 
 .quote {
     font-size: 36px;
-    /* font-family: roboto; */
     font-style: italic; 
     font-weight: 300;
-    display: flex;
-    flex-basis: 55px;
+    width: 800px;
 }
 
 .thor {
